[package]
name = "network-interface"
description = "Retrieve system's Network Interfaces on Linux, macOS and Windows on a standarized manner"
version = "0.1.4"
repository = "https://github.com/EstebanBorai/network-interface"
categories = ["web-programming", "network-programming"]
homepage = "https://github.com/EstebanBorai/network-interface"
keywords = ["network", "interfaces", "ip", "web", "network"]
license = "MIT OR Apache-2.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.101"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.101"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0.73"

[target.'cfg(target_os = "windows")'.dependencies]
libc = "0.2.101"
winapi = {version = "0.3", features = ["ws2def", "ws2ipdef", "netioapi", "iphlpapi", "iptypes", "ntdef"] }

